--- a/app/src/main/res/drawable/ic_hard_drive.xml
+++ b/app/src/main/res/drawable/ic_hard_drive.xml
@@ -9,12 +9,12 @@
       android:strokeAlpha="0"
       android:fillAlpha="0"/>
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="@color/colorPrimary"
       android:pathData="M20.79,11.34l-3.34,-6.68A3,3 0,0 0,14.76 3H9.24a3,3 0,0 0,-2.69 1.66l-3.34,6.68a2,2 0,0 0,-0.21 0.9V18a3,3 0,0 0,3 3h12a3,3 0,0 0,3 -3v-5.76a2,2 0,0 0,-0.21 -0.9zM8.34,5.55a1,1 0,0 1,0.9 -0.55h5.52a1,1 0,0 1,0.9 0.55L18.38,11H5.62zM18,19H6a1,1 0,0 1,-1 -1v-5h14v5a1,1 0,0 1,-1 1z"/>
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="@color/colorPrimary"
       android:pathData="M16,15h-4a1,1 0,0 0,0 2h4a1,1 0,0 0,0 -2z"/>
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="@color/colorPrimary"
       android:pathData="M8,16m-1,0a1,1 0,1 1,2 0a1,1 0,1 1,-2 0"/>
 </vector>
