--- a/app/src/main/res/layout/file_item.xml
+++ b/app/src/main/res/layout/file_item.xml
@@ -1,30 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="wrap_content"
+    android:padding="16dp">
 
     <ImageView
         android:id="@+id/file_icon"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_centerVertical="true"
         android:contentDescription="@string/file_icon"
-        android:layout_margin="10dp"/>
+        android:layout_margin="8dp" />
 
     <TextView
         android:id="@+id/file_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/file_icon"
+        android:layout_toEndOf="@id/file_icon"
         android:layout_alignTop="@id/file_icon"
         android:maxLines="1"
-        android:textSize="20sp"
-        android:layout_marginRight="10dp"/>
+        android:ellipsize="end"
+        android:textSize="16sp"
+        android:layout_marginStart="8sp"/>
 
     <TextView
         android:id="@+id/file_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/file_icon"
-        android:layout_below="@id/file_name"/>
+        android:layout_toEndOf="@id/file_icon"
+        android:layout_below="@id/file_name"
+        android:layout_marginStart="8sp"/>
 
 </RelativeLayout>
