--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,8 +19,14 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginBottom">16dp</item>
         <item name="counterEnabled">true</item>
-        <item name="counterMaxLength">15</item>
+        <item name="counterMaxLength">30</item>
         <item name="endIconMode">clear_text</item>
+    </style>
+
+    <style name="InputEditText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:maxLength">30</item>
     </style>
 
 </resources>
