--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="textColor">#000000</color>
+
+    <color name="colorFileIcon">#ff737373</color>
+    <color name="colorFileIconTorrent">#4CAF50</color>
 </resources>
