--- a/app/src/main/res/layout/file_item.xml
+++ b/app/src/main/res/layout/file_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp">
@@ -17,18 +18,44 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/file_icon"
-        android:layout_alignTop="@id/file_icon"
         android:maxLines="1"
         android:ellipsize="end"
         android:textSize="16sp"
         android:layout_marginStart="8sp"/>
 
-    <TextView
+    <LinearLayout
         android:id="@+id/file_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/file_icon"
         android:layout_below="@id/file_name"
-        android:layout_marginStart="8sp"/>
+        android:paddingTop="4dp"
+        android:layout_marginStart="8sp">
+
+        <TextView
+            android:id="@+id/file_date"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            tools:text="22 Oct"/>
+
+        <TextView
+            android:id="@+id/file_size"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            tools:text="50 MB"/>
+
+        <TextView
+            android:id="@+id/file_type"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            tools:text="Video"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
