--- a/app/src/main/res/layout/file_item.xml
+++ b/app/src/main/res/layout/file_item.xml
@@ -33,20 +33,34 @@
         android:layout_marginStart="8sp">
 
         <TextView
-            android:id="@+id/file_date"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-            tools:text="22 Oct"/>
-
-        <TextView
             android:id="@+id/file_size"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:textSize="12sp"
             tools:text="50 MB"/>
+
+        <TextView
+            android:id="@+id/file_date"
+            android:layout_width="0dp"
+            android:layout_weight="0.5"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            tools:text="22 Oct"/>
+
+        <TextView
+            android:id="@+id/file_time"
+            android:layout_width="0dp"
+            android:layout_weight="0.5"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            tools:text="12:00"/>
 
         <TextView
             android:id="@+id/file_type"
@@ -54,7 +68,9 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:textSize="12sp"
-            tools:text="Video"/>
+            android:maxLines="1"
+            android:ellipsize="end"
+            tools:text="Torrent File"/>
 
     </LinearLayout>
 
