Preparing for issues #3 & #4
* TODO:
* Add SQLite database to store connection profiles
* Prepare connections list from database

Signed-off-by: chankruze <chankruze@gmail.com>

--- a/app/src/main/res/menu/menu_frag_file_operations.xml
+++ b/app/src/main/res/menu/menu_frag_file_operations.xml
@@ -3,7 +3,7 @@
     <item
         android:id="@+id/option_info"
         android:icon="@drawable/ic_info"
-        android:title="@string/option_info"/>
+        android:title="@string/toolbar_info"/>
 
     <item
         android:id="@+id/option_rename"
