--- a/app/src/main/res/drawable/ic_people.xml
+++ b/app/src/main/res/drawable/ic_people.xml
@@ -9,12 +9,12 @@
       android:strokeAlpha="0"
       android:fillAlpha="0"/>
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="@color/colorPrimary"
       android:pathData="M9,11a4,4 0,1 0,-4 -4,4 4,0 0,0 4,4zM9,5a2,2 0,1 1,-2 2,2 2,0 0,1 2,-2z"/>
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="@color/colorPrimary"
       android:pathData="M17,13a3,3 0,1 0,-3 -3,3 3,0 0,0 3,3zM17,9a1,1 0,1 1,-1 1,1 1,0 0,1 1,-1z"/>
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="@color/colorPrimary"
       android:pathData="M17,14a5,5 0,0 0,-3.06 1.05A7,7 0,0 0,2 20a1,1 0,0 0,2 0,5 5,0 0,1 10,0 1,1 0,0 0,2 0,6.9 6.9,0 0,0 -0.86,-3.35A3,3 0,0 1,20 19a1,1 0,0 0,2 0,5 5,0 0,0 -5,-5z"/>
 </vector>
