--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.FileListingActivity">
+    android:orientation="vertical"
+    tools:context=".activities.MainActivity">
 
-    <ListView
-        android:id="@android:id/list"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/file_item"
-        android:divider="@null" />
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorToolbar"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+    <!--    <RelativeLayout-->
+    <!--        android:layout_gravity="center"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content">-->
 
-    <ImageView
-        android:id="@+id/error_logo"
-        android:layout_centerInParent="true"
-        android:layout_width="150sp"
-        android:layout_height="150sp"
-        android:src="@drawable/ic_alert" />
+    <!--        <TextView-->
+    <!--            style="@style/AppTileBarLogo"-->
+    <!--            android:layout_centerInParent="true" />-->
 
-    <TextView
-        android:id="@+id/error_desc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="No Permission"
-        android:layout_centerInParent="true"
-        android:layout_below="@id/error_logo"
-        style="@style/TextAppearance.AppCompat.Headline"/>
+    <!--        <ImageButton-->
+    <!--            android:id="@+id/SettingsButton"-->
+    <!--            android:contentDescription="@string/btn_desc_info"-->
+    <!--            style="@style/ToolBarButtons"-->
+    <!--            android:layout_alignParentEnd="true"-->
+    <!--            android:layout_marginEnd="16dp"-->
+    <!--            android:src="@drawable/ic_info" />-->
 
-</RelativeLayout>
+    <!--    </RelativeLayout>-->
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <FrameLayout
+            android:id="@+id/fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </ScrollView>
+</LinearLayout>
