--- a/app/src/main/res/layout/fragment_edit_connection.xml
+++ b/app/src/main/res/layout/fragment_edit_connection.xml
@@ -10,6 +10,18 @@
         android:orientation="vertical"
         android:padding="16dp">
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/name_layout"
+            style="@style/InputLayoutStyle"
+            android:hint="@string/hint_name"
+            app:helperText="@string/helper_name">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/id_name"
+                style="@style/InputEditText"
+                android:digits="._-0123456789qwertzuiopasdfghjklyxcvbnm" />
+        </com.google.android.material.textfield.TextInputLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -38,7 +50,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/id_host"
                 style="@style/InputEditText"
-                android:digits="._-0123456789qwertzuiopasdfghjklyxcvbnm"/>
+                android:digits="._-0123456789qwertzuiopasdfghjklyxcvbnm" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -136,41 +148,6 @@
                     android:inputType="textPassword" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <RadioGroup
-                android:id="@+id/radio_remember_passowrd"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checkedButton="@id/save_pass_01"
-                android:orientation="vertical">
-
-                <RadioButton
-                    android:id="@+id/save_pass_01"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/remember_pass_01" />
-
-                <RadioButton
-                    android:id="@+id/save_pass_02"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/remember_pass_02" />
-
-                <RadioButton
-                    android:id="@+id/save_pass_03"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/remember_pass_03" />
-            </RadioGroup>
-
         </LinearLayout>
-
-        <Button
-            android:id="@+id/btn_connect"
-            style="@style/ButtonOutlined"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:text="@string/btn_connect" />
-
     </LinearLayout>
 </ScrollView>
