--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#FDD835</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
-    <color name="textColor">#000000</color>
+    <color name="colorTextPrimary">#000000</color>
+    <color name="colorTextSecondary">#786619</color>
 
     <color name="colorFileIcon">#ff737373</color>
     <color name="colorFileIconTorrent">#4CAF50</color>
+
+    <color name="colorGray">#5E5F73</color>
+    <color name="colorToolbar">#FDD835</color>
 </resources>
