--- a/app/src/main/res/layout/fragment_edit_connection.xml
+++ b/app/src/main/res/layout/fragment_edit_connection.xml
@@ -17,9 +17,8 @@
             app:helperText="@string/helper_name">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/id_name"
-                style="@style/InputEditText"
-                android:digits="._-0123456789qwertzuiopasdfghjklyxcvbnm" />
+                android:id="@+id/id_edit_name"
+                style="@style/InputEditText" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <LinearLayout
@@ -48,7 +47,7 @@
             app:helperText="@string/helper_host">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/id_host"
+                android:id="@+id/id_edit_host"
                 style="@style/InputEditText"
                 android:digits="._-0123456789qwertzuiopasdfghjklyxcvbnm" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -62,7 +61,7 @@
             app:helperText="@string/helper_port">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/id_port"
+                android:id="@+id/id_edit_port"
                 style="@style/InputEditText"
                 android:maxLength="5" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -132,7 +131,7 @@
                 android:hint="@string/hint_username">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/id_username"
+                    android:id="@+id/id_edit_username"
                     style="@style/InputEditText" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -140,10 +139,11 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/password_layout"
                 style="@style/InputLayoutStyle"
-                android:hint="@string/hint_password">
+                android:hint="@string/hint_password"
+                app:endIconMode="password_toggle">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/id_password"
+                    android:id="@+id/id_edit_password"
                     style="@style/InputEditText"
                     android:inputType="textPassword" />
             </com.google.android.material.textfield.TextInputLayout>
