--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -92,6 +92,7 @@
         <item name="android:gravity">center</item>
         <item name="android:padding">16dp</item>
         <item name="android:orientation">horizontal</item>
+        <item name="android:background">?attr/selectableItemBackground</item>
     </style>
 
     <style name="CardMainOptionInnerLinearLayout">
