Add File Rename Functionality | #2 Progress 3/4
Signed-off-by: chankruze <chankruze@gmail.com>

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,6 +29,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:maxLength">30</item>
         <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
     </style>
 
     <style name="RippleView">
