--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorDarkBg"
     tools:context=".activities.MainActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -12,32 +13,12 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorToolbar"
-        android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-    <!--    <RelativeLayout-->
-    <!--        android:layout_gravity="center"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content">-->
-
-    <!--        <TextView-->
-    <!--            style="@style/AppTileBarLogo"-->
-    <!--            android:layout_centerInParent="true" />-->
-
-    <!--        <ImageButton-->
-    <!--            android:id="@+id/SettingsButton"-->
-    <!--            android:contentDescription="@string/btn_desc_info"-->
-    <!--            style="@style/ToolBarButtons"-->
-    <!--            android:layout_alignParentEnd="true"-->
-    <!--            android:layout_marginEnd="16dp"-->
-    <!--            android:src="@drawable/ic_info" />-->
-
-    <!--    </RelativeLayout>-->
-
 
     <FrameLayout
-            android:id="@+id/fragment_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorDarkBg" />
 </LinearLayout>
