--- a/app/src/main/res/layout/fragment_connections.xml
+++ b/app/src/main/res/layout/fragment_connections.xml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_connections"
-        tools:listitem="@layout/item_connection_profile"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        tools:listitem="@layout/item_connection_profile" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floating_action_button"
-        style="@style/Widget.MaterialComponents.FloatingActionButton"
-        app:backgroundTint="@color/colorPrimary"
-        app:srcCompat="@drawable/ic_plus"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="32dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        app:useCompatPadding="true"
+        app:backgroundTint="@color/colorPrimary"
+        app:srcCompat="@drawable/ic_plus" />
 
 </RelativeLayout>
