--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FDD835</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimaryDark">@color/colorDarkBg</color>
+    <color name="colorAccent">#42A5F5</color>
 
-    <color name="colorTextPrimary">#000000</color>
-    <color name="colorTextSecondary">#786619</color>
+    <color name="colorTextPrimary">#EEE8D5</color>
+    <color name="colorTextSecondary">#B0BEC5</color>
 
     <color name="colorFileIcon">#ff737373</color>
     <color name="colorFileIconTorrent">#4CAF50</color>
 
     <color name="colorGray">#5E5F73</color>
-    <color name="colorToolbar">#FDD835</color>
+<!--    <color name="colorToolbar">#FDD835</color>-->
+
+    <color name="colorDarkBg">#073642</color>
+
+    <color name="colorToolbar">@color/colorDarkBg</color>
+
+    <color name="colorTextPrimaryProfile">#000000</color>
+    <color name="colorTextSecondaryProfile">#039BE5</color>
+
+    <color name="colorButtonConnect">#43A047</color>
 </resources>
