Use RecyclerView for Files Listing | v3.0.0-rc1
* Add fab to show transfers info as a bottom sheet
* Rename files from Item to RemoteFile
* Remove unused arrays
* Add icon tint to files option menu

Signed-off-by: chankruze <chankruze@gmail.com>

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,7 @@
     <color name="colorTextSecondaryProfile">#039BE5</color>
 
     <color name="colorButtonConnect">#43A047</color>
+
+    <color name="colorTransferSheetBg">#3C4556</color>
+    <color name="colorTransferSheetText">#FFFFFF</color>
 </resources>
