--- a/app/src/main/res/drawable/ic_close.xml
+++ b/app/src/main/res/drawable/ic_close.xml
@@ -9,6 +9,6 @@
       android:strokeAlpha="0"
       android:fillAlpha="0"/>
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="@color/colorPrimary"
       android:pathData="M13.41,12l4.3,-4.29a1,1 0,1 0,-1.42 -1.42L12,10.59l-4.29,-4.3a1,1 0,0 0,-1.42 1.42l4.3,4.29 -4.3,4.29a1,1 0,0 0,0 1.42,1 1,0 0,0 1.42,0l4.29,-4.3 4.29,4.3a1,1 0,0 0,1.42 0,1 1,0 0,0 0,-1.42z"/>
 </vector>
