--- a/app/src/main/res/layout/activity_files.xml
+++ b/app/src/main/res/layout/activity_files.xml
@@ -12,13 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <ListView
-        android:id="@android:id/list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@null"
-        android:background="@null"
-        tools:listitem="@layout/file_item" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_items"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/file_item"/>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
@@ -49,10 +47,10 @@
         android:text="Edit Connection" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_progress"
+        android:id="@+id/fab_transfer"
         style="@style/Widget.MaterialComponents.FloatingActionButton"
         app:backgroundTint="@color/colorPrimary"
-        app:srcCompat="@drawable/ic_cloud_upload"
+        app:srcCompat="@drawable/ic_activity"
         android:layout_alignParentEnd="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
