Use Service instead of IntentService | Fixes #30
* App is becoming laggy when download files is large
* Implements local broadcast for progress update
* Add ripple effect to profile & menu cards
* Update colors

Signed-off-by: chankruze <chankruze@gmail.com>

--- a/app/src/main/res/layout/transfer_item.xml
+++ b/app/src/main/res/layout/transfer_item.xml
@@ -2,12 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@null"
     android:paddingTop="4dp"
     android:paddingBottom="4dp"
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/transfer_file_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/ic_cloud_upload"
@@ -15,7 +17,7 @@
         android:drawableTint="@color/colorPrimary"
         android:ellipsize="end"
         android:maxLines="2"
-        android:text="Sample_File.mkv"
+        tools:text="Sample_File.mkv"
         android:textColor="@color/colorTransferSheetText" />
 
     <LinearLayout
@@ -25,20 +27,22 @@
         android:paddingTop="8dp">
 
         <ProgressBar
+            android:id="@+id/transfer_progress_bar"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1.5"
             android:layout_gravity="center_vertical"
-            android:progress="80" />
+            tools:progress="80" />
 
         <TextView
+            android:id="@+id/transfer_progress_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.2"
             android:textColor="@color/colorTransferSheetText"
             android:textAlignment="textEnd"
-            android:text="80%" />
+            tools:text="80%" />
 
     </LinearLayout>
 
