--- a/app/src/main/res/menu/menu_file_operations.xml
+++ b/app/src/main/res/menu/menu_file_operations.xml
@@ -20,7 +20,7 @@
 
     <item
         android:id="@+id/option_download"
-        android:icon="@drawable/ic_download"
+        android:icon="@drawable/ic_cloud_download"
         android:iconTint="@color/colorPrimary"
         android:title="@string/option_download"/>
 </menu>
