Add support for material Day/Light theme
* Use light status bar and nav bar with light theme.
* Update color and style profiles for both themes.

Signed-off-by: chankruze <chankruze@gmail.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/colorDarkBgOne"
     tools:context=".activities.MainActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -20,5 +19,5 @@
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorDarkBgOne" />
+        android:background="@color/colorDarkBg" />
 </LinearLayout>
