--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FDD835</color>
+    <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">@color/colorDarkBg</color>
     <color name="colorAccent">#42A5F5</color>
 
-    <color name="colorTextPrimary">#000000</color>
-    <color name="colorTextSecondary">#7E7E7E</color>
+    <color name="colorTextPrimary">#EEE8D5</color>
+    <color name="colorTextSecondary">#B0BEC5</color>
 
     <color name="colorFileIcon">#ff737373</color>
     <color name="colorFileIconTorrent">#4CAF50</color>
 
     <color name="colorGray">#5E5F73</color>
-    <color name="colorToolbar">@color/colorDarkBg</color>
 <!--    <color name="colorToolbar">#FDD835</color>-->
 
-    <color name="colorDarkBg">#FFFFFF</color>
+    <color name="colorDarkBg">#073642</color>
 
-    <color name="colorTextPrimaryProfile">@color/colorTextPrimary</color>
-    <color name="colorTextSecondaryProfile">@color/colorTextSecondary</color>
+    <color name="colorToolbar">@color/colorDarkBg</color>
+
+    <color name="colorTextPrimaryProfile">@color/colorPrimary</color>
+    <color name="colorTextSecondaryProfile">#039BE5</color>
 
     <color name="colorButtonConnect">#43A047</color>
 
     <color name="colorTransferSheetBg">#3C4556</color>
     <color name="colorTransferSheetText">#FFFFFF</color>
 
-    <color name="colorCardBg">#FFFFFF</color>
+    <color name="colorCardBg">#000000</color>
 </resources>
