--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:statusBarColor">@color/colorDarkBgOne</item>
+        <item name="android:windowBackground">@color/colorPrimaryDark</item>
         <item name="android:navigationBarColor">@color/colorPrimaryDark</item>
     </style>
 
@@ -70,7 +70,7 @@
         <!--<item name="android:layout_rowWeight">1</item>-->
         <!--<item name="android:layout_columnWeight">1</item>-->
 
-        <item name="cardBackgroundColor">@color/colorCardBgOne</item>
+        <item name="cardBackgroundColor">@color/colorCardBg</item>
         <item name="cardCornerRadius">8dp</item>
         <item name="cardElevation">8dp</item>
     </style>
@@ -90,7 +90,7 @@
     <style name="CardMainOptionDescription" parent="CardMainOptionText">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-<!--        <item name="android:paddingTop">4dp</item>-->
+        <!--        <item name="android:paddingTop">4dp</item>-->
         <item name="android:textColor">@color/colorTextSecondaryProfile</item>
     </style>
 
